added sercan's code

--- a/sequence_analysis.ipynb
+++ b/sequence_analysis.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When a DNA sequence is discovered, we can translate it into the corresponding protein sequence using the genetic code. The DNA codon table shows how a four-nucleotide sequence (A,T,G,C) can be uniquely related to a set of 20 amino acids. This allows us to show how the information is encoded within genetic material and how it is translated into proteins by living cells. Below is an image of the codon mapping, and how it relates three-nucleotides (a triplet) to a protein."
+    "When a DNA sequence is discovered, we can translate it into the corresponding protein sequence using the genetic code. The DNA codon table shows how a triplet sequence of four nucleotides (A,T,G,C) can be uniquely related to a set of 20 amino acids. This allows us to show how the information is encoded within genetic material and how it is translated into proteins by living cells. Below is an image of the codon mapping."
    ]
   },
   {
@@ -69,10 +69,64 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Protein Sequence:  MPTTKKTLMFLSSFFTSLGSFIVICSIL\n"
+     ]
+    }
+   ],
    "source": [
-    "Sercan's code goes here"
+    "import re\n",
+    "\n",
+    "#declare variable strings\n",
+    "tempStr = \"\"\n",
+    "finalSeq = \"\"\n",
+    "string = \"\"\n",
+    "\n",
+    "#open file, clean data (remove all lines that start with \">\")\n",
+    "with open(\"sample_dna.txt\",\"r\") as f:\n",
+    "    for line in f:\n",
+    "           if re.match(\">\",line):\n",
+    "              pass\n",
+    "           else:\n",
+    "              line = line.rstrip(\"\\n\")\n",
+    "              string = string + line\n",
+    "                \n",
+    "# create the codon table mapping\n",
+    "table = { \n",
+    "    'ATA':'I', 'ATC':'I', 'ATT':'I', 'ATG':'M', \n",
+    "    'ACA':'T', 'ACC':'T', 'ACG':'T', 'ACT':'T', \n",
+    "    'AAC':'N', 'AAT':'N', 'AAA':'K', 'AAG':'K', \n",
+    "    'AGC':'S', 'AGT':'S', 'AGA':'R', 'AGG':'R',                  \n",
+    "    'CTA':'L', 'CTC':'L', 'CTG':'L', 'CTT':'L', \n",
+    "    'CCA':'P', 'CCC':'P', 'CCG':'P', 'CCT':'P', \n",
+    "    'CAC':'H', 'CAT':'H', 'CAA':'Q', 'CAG':'Q', \n",
+    "    'CGA':'R', 'CGC':'R', 'CGG':'R', 'CGT':'R', \n",
+    "    'GTA':'V', 'GTC':'V', 'GTG':'V', 'GTT':'V', \n",
+    "    'GCA':'A', 'GCC':'A', 'GCG':'A', 'GCT':'A', \n",
+    "    'GAC':'D', 'GAT':'D', 'GAA':'E', 'GAG':'E', \n",
+    "    'GGA':'G', 'GGC':'G', 'GGG':'G', 'GGT':'G', \n",
+    "    'TCA':'S', 'TCC':'S', 'TCG':'S', 'TCT':'S', \n",
+    "    'TTC':'F', 'TTT':'F', 'TTA':'L', 'TTG':'L', \n",
+    "    'TAC':'Y', 'TAT':'Y', 'TAA':'_', 'TAG':'_', \n",
+    "    'TGC':'C', 'TGT':'C', 'TGA':'_', 'TGG':'W', \n",
+    "} \n",
+    "    \n",
+    "    \n",
+    "# Generate protein sequence\n",
+    "for i in range(0, len(string)-(3+len(string)%3), 3):\n",
+    "    if table[string[i:i+3]] == '_' :\n",
+    "        break\n",
+    "    finalSeq += table[string[i:i+3]]\n",
+    "\n",
+    "# Print the protein sequence\n",
+    "print (\"Protein Sequence: \", finalSeq)\n"
    ]
   },
   {
@@ -86,12 +140,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After we have collected a series of protein sequences from our translation, we may begin to analyze their functionality. Our chosen method of prediction is homology-based function prediction. Proteins of similar sequence tend to be homologous, thus sharing similar functionality. By comparing our newly generated protein sequences to a database of proteins with known functionality, we are able to adequately predict the functionality of our new protein sequence."
+    "After we have collected a series of protein sequences from our translation, we may begin to analyze their functionality. Our chosen method of prediction is homology-based function prediction. Proteins of similar sequence tend to be homologous, thus sharing similar functionality. By comparing our newly generated protein sequences to a database of known proteins, we are able to adequately predict their functionality."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +222,9 @@
     "    return\n",
     "\n",
     "\n",
-    "checkSequence(\"MPTTK\")"
+    "checkSequence(\"MPTTKKTLMFLSSFFTSLGSFIVICSIL\")\n",
+    "\n",
+    "#checkSequence(\"MEVFKAPPIGI\")\n"
    ]
   },
   {
@@ -194,7 +250,7 @@
    "source": [
     "## Sources:\n",
     "\n",
-    "Protein data is pulled from:\n",
+    "Protein data for the function prediction program is pulled from:\n",
     "\n",
     "https://www.uniprot.org/uniprot/?query=*&fil=organism%3A%22Homo+sapiens+%28Human%29+%5B9606%5D%22+AND+reviewed%3Ayes\n"
    ]
@@ -205,19 +261,12 @@
    "source": [
     "## Contributors:\n",
     "\n",
-    "- Sercan Akcay ?\n",
+    "- Sercan Akcay\n",
     "- Adel Alazemi\n",
     "- Wyatt Pickett \n",
     "- Kaylyn Schnaus\n",
     "- Skylar Trendley"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
