update variable names

--- a/sequence_analysis.ipynb
+++ b/sequence_analysis.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
     "#declare variable strings\n",
     "tempStr = \"\"\n",
     "finalSeq = \"\"\n",
-    "string = \"\"\n",
+    "dna = \"\"\n",
     "\n",
     "#open file, clean data (remove all lines that start with \">\")\n",
     "with open(\"sample_dna.txt\",\"r\") as f:\n",
@@ -96,7 +96,7 @@
     "              pass\n",
     "           else:\n",
     "              line = line.rstrip(\"\\n\")\n",
-    "              string = string + line\n",
+    "              dna = dna + line\n",
     "                \n",
     "# create the codon table mapping\n",
     "table = { \n",
@@ -121,9 +121,9 @@
     "    \n",
     "# Generate protein sequence\n",
     "for i in range(0, len(string)-(3+len(string)%3), 3):\n",
-    "    if table[string[i:i+3]] == '_' :\n",
+    "    if table[dna[i:i+3]] == '_' :\n",
     "        break\n",
-    "    finalSeq += table[string[i:i+3]]\n",
+    "    finalSeq += table[dna[i:i+3]]\n",
     "\n",
     "# Print the protein sequence\n",
     "print (\"Protein Sequence: \", finalSeq)\n"
